# sc-payment-w3f-grant

./: .gitignore  .gitmodules  README.md
moonbeam/: .env.example  README.md  const.ts  hardhat.config.ts  package-lock.json  package.json
moonbeam/contracts/: PaymentProcessor.sol
moonbeam/ignition/modules/: PaymentProcessor.ts
moonbeam/moonbeam-indexer/: Dockerfile  commands.json  docker-compose.yml  package-lock.json  package.json  schema.graphql  squid.yaml
moonbeam/moonbeam-indexer/abi/: KBPaymentProcessor.json
moonbeam/moonbeam-indexer/db/migrations/: 1727883118982-Data.js  1728513023733-Data.js
moonbeam/moonbeam-indexer/src/: main.ts  processor.ts
moonbeam/moonbeam-indexer/src/abi/: KBPaymentProcessor.ts
moonbeam/moonbeam-sc/: README.md
moonbeam/moonbeam-sc/script/: KBPaymentProcessor.s.sol
moonbeam/moonbeam-sc/src/: KBPaymentProcessor.sol
moonbeam/moonbeam-sc/test/: KBPaymentProcessor.t.sol
moonbeam/scripts/: listen_for_payments.ts  sign_transfer_and_send_message.ts  start_indexer.sh  transfer_from_moonbeam_to_relay.ts  transfer_from_relay_to_moonbeam.ts
pop/: .gitignore  README.md  package.json
pop/payment_processor/: Cargo.toml  README.md  e2e_tests.rs  lib.rs  xcm.rs
pop/pop-indexer/: Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  squid.yaml
pop/pop-indexer/src/: main.ts  processor.ts
